--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bloc_provider: ^0.5.0+3
   rxdart: ^0.21.0
   injector: ^1.0.6
+  flutter_custom_tabs: ^0.6.0
 
 dev_dependencies:
   flutter_test:
