--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   package_info: ^0.4.0+3
   shared_preferences: ^0.5.2
+  flutter_custom_tabs: ^0.6.0
   json_annotation: ^2.2.0
   uuid: ^2.0.1
   bloc_provider: ^0.5.0+3
   rxdart: ^0.21.0
   injector: ^1.0.6
-  flutter_custom_tabs: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -29,7 +29,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/drawer_header_icon.png
