--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   package_info: ^0.4.0+3
   shared_preferences: ^0.5.2
   flutter_custom_tabs: ^0.6.0
+  fluttertoast: ^3.0.3
   json_annotation: ^2.2.0
   uuid: ^2.0.1
   bloc_provider: ^0.5.0+3
